Create firstpage and add effort spent

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -5,8 +5,35 @@
   %TODO: check id SafeStreets is well written in all files (i.e. missing final s)
   % TODO: Fill title page
   \begin{titlepage}
-  
+    \begin{figure}[t]
+        \centering\includegraphics[width=0.5\textwidth]{Images/logo_polimi}
+    \end{figure}
+    \begin{center}
+        \textsc{ \LARGE{Politecnico di Milano \\}}
+      \textsc{ \LARGE{Dipartimento di Energia, Informazione e Bioingegneria\\ }}
+      \textnormal{ \LARGE{Computer science and engineering \\ Software engineering 2\\}}
+      \vspace{30mm}
+      \fontsize{10mm}{7mm}\selectfont 
+        \textup{SafeStreets - RASD}\\
+    \end{center}
+    
+    \vspace{25mm}
+    
+    \begin{minipage}[t]{0.47\textwidth}
+      \textnormal{\large{\bf Professor:\\}}
+      {\large Prof. Elisabetta Di Nitto}
+    \end{minipage}\hfill\begin{minipage}[t]{0.47\textwidth}\raggedleft
+      \textnormal{\large{\bf Candidates:\\}}
+      {\large Nicolò Albergoni - 939589\\}
+      {\large Luca Loria - 9444679}
+    \end{minipage}
+    
+    \vspace{20mm}
+    
+    \centering{\large{Academic Year 2109/2020 \\ Milano - 10/11/2019 }}
+    
   \end{titlepage}
+  
   
   \tableofcontents
    
