Finish Use case diagram, Fix images

--- a/RASD/Sections/3-Specific_Requirements/Functional_requirements/Functional_requirements.tex
+++ b/RASD/Sections/3-Specific_Requirements/Functional_requirements/Functional_requirements.tex
@@ -1,11 +1,15 @@
 \subsection{Scenarios}
 \input{Sections/3-Specific_Requirements/Functional_requirements/Scenarios.tex}
 
-\subsection{Use cases}
+\subsection{Use cases} \label{use_cases}
 \input{Sections/3-Specific_Requirements/Functional_requirements/Use_cases.tex}
 
 \subsection{Requirements}
 \input{Sections/3-Specific_Requirements/Functional_requirements/Requirements.tex}
 
+\newpage
 \subsection{Sequence diagrams}
 \input{Sections/3-Specific_Requirements/Functional_requirements/Sequence_digrams.tex}
+
+\subsection{Use case diagrams}
+\input{Sections/3-Specific_Requirements/Functional_requirements/Use_case_diagrams.tex}
