Add Effort spent

--- a/RASD/Sections/5-Effort_spent/Luca_loria.tex
+++ b/RASD/Sections/5-Effort_spent/Luca_loria.tex
@@ -24,17 +24,17 @@
         \hline
         31/10/2019 & 1.5 & Revision ch 3 \\									
         \hline
-        1/11/2019 & 1 & Alloy signatures \\									
+        01/11/2019 & 1 & Alloy signatures \\									
         \hline
-        4/11/2019 & 1.5 & Alloy facts part 1 \\									
+        04/11/2019 & 1.5 & Alloy facts part 1 \\									
         \hline
-        6/11/2019 & 3 & "Alloy facts part 2 and world predicates \\						
+        06/11/2019 & 3 & Alloy facts part 2 and world predicates \\						
         \hline
-        7/11/2019 & 4 & Finish alloy, fix class diagram and start impaginating \\		
+        07/11/2019 & 4 & Finish alloy, fix class diagram and start impaginating \\		
         \hline
-        8/11/2019 & 3.5 & Reviewing requirements and sequence diagrams. Create references and Revision. Create alloy world section in RASD. Start impaginating correctly	\\
+        08/11/2019 & 3.5 & Reviewing requirements and sequence diagrams. Create references and Revision. Create alloy world section in RASD. Start impaginating correctly	\\
         \hline
-        9/11/2019 & 2 & Shared phenomena matrix, frontpage and pagination fixes \\
+        09/11/2019 & 2 & Shared phenomena matrix, frontpage and pagination fixes \\
         \hline							
     \end{tabularx}
   \end{table}
