--- a/RASD/Sections/5-Effort_spent/Nicolo_albergoni.tex
+++ b/RASD/Sections/5-Effort_spent/Nicolo_albergoni.tex
@@ -1,1 +1,40 @@
 \section{Nicolò Albergoni}
+\begin{table}[H]
+  \centering
+  % \renewcommand{\arraystretch}{0.8}
+  \begin{tabularx}{\textwidth}{ |l|c|X| }
+      \hline
+      Day & Hours & Topic \\
+      \hline
+      22/10/2019 & 2.5 & Purpose \\								
+      \hline
+      23/10/2019 & 3 & Scope, Current system \\
+      \hline
+      24/10/2019 & 1.75	& Goals, Overview\\
+      \hline								
+      26/10/2019 & 3	& Product perspective, Product function\\									
+      \hline
+      27/10/2019 & 3 & Product function, Revision ch 1 and 2 \\									
+      \hline
+      29/10/2019 & 2.5 & Scenarios \\									
+      \hline
+      30/10/2019 & 4 & Use cases \\									
+      \hline
+      31/10/2019 & 3 & Use cases, Revision ch 3 \\
+      \hline
+      01/11/2019 & 1 & Finish use cases \\									
+      \hline
+      02/11/2019 & 2.75 & Requirements \\									
+      \hline
+      05/11/2019 & 2.25 & Finish requirements \\									
+      \hline
+      06/11/2019 & 2.5 & Sequence diagrams \\									
+      \hline
+      07/11/2019 & 4.25 & Sequence diagrams \\						
+      \hline
+      08/11/2019 & 1.75 & Finish and reviewing of sequence diagrams \\
+      \hline
+      09/11/2019 & 2 & Use case diagrams, pagination fixes	\\
+      \hline      							
+  \end{tabularx}
+\end{table}
