Add Traceability matrix

--- a/RASD/Sections/5-Effort_spent/Nicolo_albergoni.tex
+++ b/RASD/Sections/5-Effort_spent/Nicolo_albergoni.tex
@@ -30,11 +30,13 @@
       \hline
       06/11/2019 & 2.5 & Sequence diagrams \\									
       \hline
-      07/11/2019 & 4.25 & Sequence diagrams \\						
+      07/11/2019 & 3.25 & Sequence diagrams \\						
       \hline
       08/11/2019 & 1.75 & Finish and reviewing of sequence diagrams \\
       \hline
       09/11/2019 & 2 & Use case diagrams, pagination fixes	\\
-      \hline      							
+      \hline
+      10/11/2019 & 2 & Traceability matrix, final revision	\\
+      \hline        							
   \end{tabularx}
 \end{table}
