--- a/RASD/Sections/3-Specific_Requirements/Functional_requirements/Functional_requirements.tex
+++ b/RASD/Sections/3-Specific_Requirements/Functional_requirements/Functional_requirements.tex
@@ -7,6 +7,9 @@
 \subsection{Requirements}
 \input{Sections/3-Specific_Requirements/Functional_requirements/Requirements.tex}
 
+\subsection{Traceability matrix}
+\input{Sections/3-Specific_Requirements/Functional_requirements/Traceability_matrix.tex}
+
 \newpage
 \subsection{Sequence diagrams}
 \input{Sections/3-Specific_Requirements/Functional_requirements/Sequence_digrams.tex}
