--- a/RASD/Sections/1-Introduction/Purpose.tex
+++ b/RASD/Sections/1-Introduction/Purpose.tex
@@ -1,5 +1,5 @@
 The purpose of this Requirement Analysis and Specification Document (RASD)
-is to provide a detailed description about the software SafeStreets.
+is to provide a detailed description about SafeStreets.
 In particular, this document is focused on important aspects that are
 useful during the design of the software architecture like: scope, functional and
 non-functional requirements, use cases and scenarios, constraints and assumption, UML diagrams, limitation and interfaces with other software.
