--- a/RASD/Sections/3-Specific_Requirements/External_interface_requirements.tex
+++ b/RASD/Sections/3-Specific_Requirements/External_interface_requirements.tex
@@ -4,7 +4,7 @@ This section shows a mockup version of the main functionalities of the mobile ap
     \item \textit{Mobile application}:
             \begin{figure}[H]
                 \centering
-                \includegraphics[width=0.45\textwidth]{login_app}
+                \includegraphics[width=0.40\textwidth]{login_app}
                 \caption{LogIn interface}
                 \label{fig:login_app}
             \end{figure}
@@ -80,7 +80,7 @@ This section shows a mockup version of the main functionalities of the mobile ap
     The local system administrator is able to search for a set of violation applying a keyword filtering
     and some advanced filters, such as date range or location.
 \end{itemize}
-
+\newpage
 \subsection{Hardware Interfaces}
 SafeStreets do not require any specific hardware device, 
 thus there are no hardware interfaces to other existing systems.
@@ -88,6 +88,6 @@ thus there are no hardware interfaces to other existing systems.
 SafeStreets is a standalone service and does not share any API to 
 external systems. However, the system requires the interaction with the Image recognition service and with the municipality's legacy system to perform its tasks. Also, a map service is required in order to show the MDS positions on the mobile application.\newline
 The software requires a standard format in order to retrieve car accident.
-data from the municipality's system. Such standard will be specified more in details in the DD.
+Such standard will be specified more in details in the DD.
 \subsection{Communication Interfaces}
 External services are not allowed to interact actively with SafeStreets, therefore the system does not offer any communication interface to external systems.
