--- a/RASD/Sections/4-Formal_Analysis_Using_Alloy/Performance.tex
+++ b/RASD/Sections/4-Formal_Analysis_Using_Alloy/Performance.tex
@@ -1,6 +1,6 @@
 \begin{figure}[H]
     \centering
     \includegraphics[width=1.0\textwidth]{alloy_performance}
-    \caption{Alloy worlds performance}
+    \caption{Alloy model performance}
     \label{fig:alloy_Performance}
 \end{figure}
