--- a/RASD/Sections/5-Effort_spent/Luca_loria.tex
+++ b/RASD/Sections/5-Effort_spent/Luca_loria.tex
@@ -35,6 +35,8 @@
         08/11/2019 & 3.5 & Reviewing requirements and sequence diagrams. Create references and Revision. Create alloy world section in RASD. Start impaginating correctly	\\
         \hline
         09/11/2019 & 2 & Shared phenomena matrix, frontpage and pagination fixes \\
+        \hline	
+        10/11/2019 & 2 & Final Revision \\
         \hline							
     \end{tabularx}
   \end{table}
