--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -25,7 +25,7 @@
     \end{minipage}\hfill\begin{minipage}[t]{0.47\textwidth}\raggedleft
       \textnormal{\large{\bf Candidates:\\}}
       {\large Nicolò Albergoni - 939589\\}
-      {\large Luca Loria - 9444679}
+      {\large Luca Loria - 944679}
     \end{minipage}
     
     \vspace{20mm}
