--- a/RASD/Sections/4-Formal_Analysis_Using_Alloy/Worlds.tex
+++ b/RASD/Sections/4-Formal_Analysis_Using_Alloy/Worlds.tex
@@ -25,6 +25,7 @@ Here are the generated world replicas by predicates:
             \label{fig:alloy_World3}
         \end{figure}
         \textit{World 3}: The third world pictures the situation in which a violation has been scheduled to a technician. Here the relations between technicians, scheduled violations and LSAs are underlined.
+        \newpage
     \item 
         \begin{figure}[H]
             \centering
