--- a/RASD/Sections/2-Overall_Description/Product_perspective.tex
+++ b/RASD/Sections/2-Overall_Description/Product_perspective.tex
@@ -5,4 +5,10 @@ SafeStreets is a software that needs to be fast and reliable in order to allow t
     \caption{Class diagram}
     \label{fig:class_diagram}
 \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1.0\textwidth]{UML_diagrams/State}
+    \caption{Report state diagram}
+    \label{fig:state}
+\end{figure}
 \newpage
