--- a/RASD/Sections/3-Specific_Requirements/Functional_requirements/Scenarios.tex
+++ b/RASD/Sections/3-Specific_Requirements/Functional_requirements/Scenarios.tex
@@ -2,7 +2,7 @@
 John is a very sportsman person who likes to ride his bicycle a lot. Therefore, every Sunday afternoon he decides to go for a ride along the bicycle lane near his house. After some time he sees a car parked on the bike lane that limits the passage of bicycles. Thus, John decides to open up the SafeStreets application on his smartphone and takes a picture of the car. After that he selects the "No parking zone" as a violation category and adds the car plate number to the report in order to make sure that it will get correctly processed by the officers. 
 
 \subsubsection{Scenario 2}
-Albert's son, Freddy, has recently been operated to his leg. Thus, the municipality released him a pass which allows Albert to park in places reserved for people with disabilities. During the week, Albert has to take Freddy to the doctor for some checks. Sometimes, he manages to find a free parking spot in front of the hospital reserved for people with disabilities, but other times the place happens to be occupied by another car without a disabilities' pass. When this happens he needs to find another parking spot more distant from the hospital and therefore he his forced to make his son walk to the healthcare center. This can be dangerous as he has just been operated. After some weeks in this condition, Albert decides to use the SafeStreets service in order to prove if the service can be really useful: he sends a report every time he finds himself in this kind of situation. After a certain period, he notices that the parking spots are either free or regularly occupied. In order to prove the functioning of the app, Albert checks his report history and finds out that all of his requests have been solved by the police.
+Albert's son, Freddy, has recently been operated to his leg. Thus, the municipality released him a pass which allows Albert to park in places reserved for people with disabilities. During the week, Albert has to take Freddy to the doctor for some checks. Sometimes, he manages to find a free parking spot in front of the hospital reserved for people with disabilities, but other times the place happens to be occupied by another car without a disabilities' pass. When this happens he needs to find another parking spot more distant from the hospital and therefore he his forced to make his son walk to the healthcare centre. This can be dangerous as he has just been operated. After some weeks in this condition, Albert decides to use the SafeStreets service in order to prove if the service can be really useful: he sends a report every time he finds himself in this kind of situation. After a certain period, he notices that the parking spots are either free or regularly occupied. In order to prove the functioning of the app, Albert checks his report history and finds out that all of his requests have been solved by the police.
 
 \subsubsection{Scenario 3}
 Every morning Kevin wakes up to go to work. Around 7 o'clock he leaves home to get to the parking spot where he parked his car the day before. Once he arrives at his car location, he notices that the car parked behind his' has crushed into his rear bumper leaving a noticeable dent. He does not have time to call the police because he is in a hurry for an important meeting at work, thus he decides to immediately send a crush report by taking a picture of the unpleasant event. After that, he rapidly gets on his car in order to arrive in time at work. Once he finishes his shift, he opens up the SafeStreets app to check the status of his report. Fortunately, he finds out that his request has been taken into account by a local police officer.
