Add Purpose and Document structure

--- a/DD/Sections/1-Introduction/Document_structure.tex
+++ b/DD/Sections/1-Introduction/Document_structure.tex
@@ -1,9 +1,9 @@
 % TODO: check if this list is still right
 \begin{enumerate}
-  \item In the first part an overall vision of the system is given. We provide a rather summarized description of the purpose of the application and its scope as a list of fundamental goals that the application must accomplish;
-  \item In the second part the general architecture of the software and its principal functions are described. Moreover in this section are also defined the classes of utilizators;
-  \item The third part is the core of the document. It defines: the requirements and the domain assumptions for each goal, 
-  a set of scenarios that describes real uses cases of the application as well as different types of UML diagrams related to different aspects of the service, like use cases diagrams and sequence diagrams. Also, a list of assumptions and design constraint and an analysis of the non-functional attributes of the system is proposed;
-  \item The fourth part propose the Alloy formalization of the system composed by its fundamental functionalities;  
-  \item The last part states the hours of work division and the tools used to create all the part of this RASD document.
+  \item In the first part a general introduction of the Design Document is given. The purpose part exposes the substantial differences with the RASD document;
+  \item The second section it's the core of the DD, it firstly provides a high level overview of the system followed by  a description of various aspects of the architecture from different points of view such as: component, deployment and runtime view. It is also present a general explanation of the architectural patterns and styles adopted in the development process. Most of the parts of this section are enriched with UML diagrams to ensure a better understanding of the concepts;
+  \item This part specifies the user interface design of the mobile application and the web interface. Since the mockups of both applications were already inserted in the RASD document here are proposed some UX diagrams to better describe the navigation and functioning of the applications;
+  \item Part four exposes the requirements traceability matrix which maps the requirements stated in the RASD document with the corresponding design element;
+  \item Chapter five provides the proposals for the implementation, integration and testing plans. This plans are created by taking into account, for each functionality, the importance for the customer and the difficulty of implementation/testing;
+  \item The last part states the hours of work division and the tools used to create  all the part of this DD document.
 \end{enumerate}
