--- a/DD/Sections/1-Introduction/Purpose.tex
+++ b/DD/Sections/1-Introduction/Purpose.tex
@@ -1,13 +1,2 @@
-The purpose of this Requirement Analysis and Specification Document (RASD)
-is to provide a detailed description about SafeStreets.
-In particular, this document is focused on important aspects that are
-useful during the design of the software architecture like: scope, functional and
-non-functional requirements, use cases and scenarios, constraints and assumption, UML diagrams, limitation and interfaces with other software.
-Overall the document is a useful guide for the developers that will have to follow
-and implement all the necessary requirements; nevertheless it is also a document
-that can be given to potential customers to get them an idea of what the software
-will be like.\newline
-The software features have been identified in the following list of goals.
-
-\subsection{Goals}
-\input{Sections/1-Introduction/Goals.tex}
+The purpose of this Design Document (DD) is to give a rather technical and implementation oriented perspective for the SafeStreets software that is going to be build.
+While the Requirement Analysis and Specification Document (RASD) gives a more conceptual description of the software and a view of the system that is not strictly related to the actual implementation, the DD provides a three hundred and sixty degree guide for the developers that will implement the software in the real world. In fact the DD document contains a practical and detailed description of the architecture that will have to be built; it covers all the aspects of the system that are relevant for the developers. For example the second section is entirely dedicated to the description of the system architecture in all the useful ways (i.e.  component, deployment and runtime view), there is also a section for the design of user interface to be realized as well as a part related to the implementation and testing plan.
